# rustine

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/shaders/: light.wgsl  shader.wgsl
examples/: learn_wgpu.rs
src/: core.rs  game.rs  graphics.rs  lib.rs  resources.rs
src/core/: asset.rs  asset_manager.rs  component.rs  engine.rs  entity.rs  module.rs  scene.rs
src/graphics/: camera.rs  camera_controller.rs  descriptable.rs  light.rs  mesh.rs  model.rs  primitives.rs  renderer.rs  scene.rs  texture.rs  utils.rs  vertex.rs
